<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_label">Account</string>
    <string name="account_page_subtitle">8bp accounts and profiles</string>
    <string name="account_page_title">Account</string>
    <string name="action_settings">Settings</string>
    <string name="active_account">Active</string>
    <string name="add_account">Add Account</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_icon">default icon</string>
    <string name="app_name">Ninja</string>
    <string name="application_label">Application</string>
    <string name="black_box_service_name">:black</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="build_label">Build</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cd_edit_name">Edit name</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="clear_fields">Clear fields</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clipboard_empty">Clipboard is empty or invalid format</string>
    <string name="close_dialog">Close</string>
    <string name="contact_reseller_title">Contact Reseller</string>
    <string name="copyright">© Ninja</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_rename_hint">Account name</string>
    <string name="dialog_rename_title">Rename Account</string>
    <string name="dialog_save">Save</string>
    <string name="download_failed">Download failed, tap to retry</string>
    <string name="enter_your_activation_key">Enter your activation key</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="failed_to_start">Failed to start 8 Ball Pool</string>
    <string name="find_reseller">Official Resellers</string>
    <string name="fk_disabled_message">Join Telegram channel for updates</string>
    <string name="fk_join_channel">Join Channel</string>
    <string name="game_not_found">Game not found</string>
    <string name="game_ready">8 Ball Pool is ready</string>
    <string name="guest_login">Guest</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="install_and_launch">Install &amp; Launch</string>
    <string name="install_from_play_store">Please install 8 Ball Pool from Play Store</string>
    <string name="install_from_play_store_short">Please install 8 Ball Pool From Play Store</string>
    <string name="installing_btn">Installing…</string>
    <string name="installing_game">Installing 8 Ball Pool…</string>
    <string name="item_view_role_description">Tab</string>
    <string name="key_activation_country_restricted">This key is not available in your country</string>
    <string name="key_activation_expired">Your activation key has expired</string>
    <string name="key_activation_required">Username and password are required</string>
    <string name="key_activation_used_on_another_device">This key is already used on another device</string>
    <string name="key_activation_wrong">Invalid activation key</string>
    <string name="language_label">Language</string>
    <string name="launch_error">Launch error: %s</string>
    <string name="launch_game">Launch 8 Ball Pool</string>
    <string name="launching_btn">Launching…</string>
    <string name="launching_game">Launching 8 Ball Pool…</string>
    <string name="link_not_available_now">Download link is not available right now</string>
    <string name="loading">Loading…</string>
    <string name="loading_resellers">Loading resellers…</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="m3_exceed_max_badge_text_suffix">%1$s%2$s</string>
    <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="maintenance_message">Service is under maintenance, please try later</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_checkbox_button_icon_path_checked">M14,18.2 11.4,15.6 10,17 14,21 22,13 20.6,11.6z</string>
    <string name="mtrl_checkbox_button_icon_path_group_name">icon</string>
    <string name="mtrl_checkbox_button_icon_path_indeterminate">M13.4,15 11,15 11,17 13.4,17 21,17 21,15z</string>
    <string name="mtrl_checkbox_button_icon_path_name">icon path</string>
    <string name="mtrl_checkbox_button_path_checked">M23,7H9C7.9,7,7,7.9,7,9v14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V9C25,7.9,24.1,7,23,7z</string>
    <string name="mtrl_checkbox_button_path_group_name">button</string>
    <string name="mtrl_checkbox_button_path_name">button path</string>
    <string name="mtrl_checkbox_button_path_unchecked">M23,7H9C7.9,7,7,7.9,7,9v14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V9C25,7.9,24.1,7,23,7z M23,23H9V9h14V23z</string>
    <string name="mtrl_checkbox_state_description_checked">Checked</string>
    <string name="mtrl_checkbox_state_description_indeterminate">Partially checked</string>
    <string name="mtrl_checkbox_state_description_unchecked">Not checked</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_cancel">Cancel</string>
    <string name="mtrl_picker_confirm">OK</string>
    <string name="mtrl_picker_day_of_week_column_header">%1$s</string>
    <string name="mtrl_picker_navigate_to_current_year_description">Navigate to current year %1$d</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$d</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to Calendar view</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to year view</string>
    <string name="nav_account">Account</string>
    <string name="nav_home">Home</string>
    <string name="nav_resellers">Resellers</string>
    <string name="nav_settings">Settings</string>
    <string name="no_network_connection">No internet connection. Please connect and try again.</string>
    <string name="no_resellers">No resellers available at the moment</string>
    <string name="not_installed">Not installed</string>
    <string name="open_link">Open</string>
    <string name="password_error">Password is required</string>
    <string name="password_hint">Password</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="resellers_list_title">Authorized Resellers</string>
    <string name="resellers_subtitle">Authorized distribution partners</string>
    <string name="resellers_title">Resellers</string>
    <string name="resellers_warning">Only purchase from authorized resellers.\nBeware of scams and unauthorized sellers.</string>
    <string name="settings_subtitle">App configuration &amp; info</string>
    <string name="settings_title">Settings</string>
    <string name="status_active">Active</string>
    <string name="status_label">Status</string>
    <string name="subscription_expires_in">SUBSCRIPTION EXPIRES IN</string>
    <string name="technical_support">Resellership</string>
    <string name="technical_support_desc">Contact us to be official reseller</string>
    <string name="telegram">Telegram</string>
    <string name="telegram_channel">Telegram Channel</string>
    <string name="telegram_channel_desc">Join our official channel</string>
    <string name="timer_days">DAYS</string>
    <string name="timer_hours">HRS</string>
    <string name="timer_minutes">MIN</string>
    <string name="timer_seconds">SEC</string>
    <string name="username_label">Username</string>
    <string name="version_code">Release</string>
    <string name="version_label">Version</string>
    <string name="version_name">v1.8.7</string>
</resources>