<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@drawable/bg_gradient_dark" android:padding="24dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="26sp" android:textStyle="bold" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/account_page_title"/>
    <TextView android:textSize="14sp" android:textColor="@color/text_subtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16dp" android:text="@string/account_page_subtitle"/>
    <androidx.recyclerview.widget.RecyclerView android:id="@+id/rv_accounts" android:paddingBottom="16dp" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:overScrollMode="never"/>
    <com.google.android.material.button.MaterialButton android:textSize="16sp" android:textStyle="bold" android:textColor="@color/white" android:id="@+id/btn_add_account" android:layout_width="match_parent" android:layout_height="56dp" android:layout_marginTop="8dp" android:text="@string/add_account" android:backgroundTint="@color/PrimaryColor" app:cornerRadius="12dp"/>
</LinearLayout>
